feat: added new kpi calculations and fixed minor problems